--- a/_includes/analytics/google.html
+++ b/_includes/analytics/google.html
@@ -1,5 +1,5 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script defer src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.id }}"></script>
+<script defer src="https://www.googletagmanager.com/gtag/js?id=G-Y607BNV9PC"></script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     window.dataLayer = window.dataLayer || [];
